# flask-graphql-example

./: README.md  app.py  pyproject.toml  schema.graphql
api/: __init__.py  models.py  mutations.py  queries.py  test.db
