[tool.poetry]
name = "graphql"
version = "0.1.0"
description = ""
authors = ["Willem Allan <willemarf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
Flask-Cors = "^3.0.10"
ariadne = "^0.14.1"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
